--- a/index.html
+++ b/index.html
@@ -1095,7 +1095,51 @@
                   </a>
               </div>
 
-              
+              <div class="col-xl-2 col-md-4 col-sm-4 col-6">
+                <a href="https://www.linkedin.com/in/harshil1712" target="_blank">
+                    <div class="speaker-card">
+                        <img class="speaker-card-img-top" src="img/mentors/Abhilash-G.jpeg" alt="Abhilash_G">
+                        <div class="speaker-card-body">
+                            <div class="speaker-card-header">
+                                <h5>Abhilash G</h5>
+                                <p class="text-faded">Associate Consultant<br />Invincix Solutions
+                                  </p>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+
+
+            <div class="col-xl-2 col-md-4 col-sm-4 col-6">
+              <a href="https://www.linkedin.com/in/amritdash60/" target="_blank">
+                  <div class="speaker-card">
+                      <img class="speaker-card-img-top" src="img/mentors/Amrit-das.jpeg" alt="Amrit-das>
+                      <div class="speaker-card-body">
+                          <div class="speaker-card-header">
+                              <h5>Amrit Das</h5>
+                              <p class="text-faded"><br />I
+                                </p>
+                          </div>
+                      </div>
+                  </div>
+              </a>
+          </div>
+
+            <!-- <div class="col-xl-2 col-md-4 col-sm-4 col-6">
+              <a href="https://www.linkedin.com/in/harshil1712" target="_blank">
+                  <div class="speaker-card">
+                      <img class="speaker-card-img-top" src="img/mentors/Kallola-Ranjan-Pradhan.jpg" alt="Abhilash_G">
+                      <div class="speaker-card-body">
+                          <div class="speaker-card-header">
+                              <h5>Abhilash G</h5>
+                              <p class="text-faded">GitHub Campus Expert<br />Github
+                                </p>
+                          </div>
+                      </div>
+                  </div>
+              </a>
+          </div> -->
   
 
           </div>
