--- a/index.html
+++ b/index.html
@@ -1118,7 +1118,7 @@
                       <div class="speaker-card-body">
                           <div class="speaker-card-header">
                               <h5>Amrit Das</h5>
-                              <p class="text-faded"><br />I
+                              <p class="text-faded"><br />
                                 </p>
                           </div>
                       </div>
