added new prizes(3box & status)

--- a/prizes.html
+++ b/prizes.html
@@ -447,6 +447,61 @@
             </div>
           </div>
         </div>
+        <div class="col-sm-4">
+          <div
+            class="card prize-card"
+            style="width: 22.11rem; height: 18.99rem; background-color: orange; margin-bottom: 5rem;"
+          >
+            <div
+              class="prize-icon-container"
+              style="top: -38px; margin-left:8rem"
+            >
+              <i class="fa fa-trophy trophy-icon" style="color: #1c274b;"></i>
+            </div>
+            <div
+              class="card-body prize-card"
+              style="background-color: orange; margin-top: 4rem;"
+            >
+              <h5 class="card-title prize-title">
+                <strong style="margin-left: 1rem; font-size: 1.6rem;"
+                  >Best 3Box Hack</strong
+                >
+              </h5>
+
+              <li class="prize-content">250$ in DAI for the Winning Team</li>
+              <li class="prize-content">3Box T-shirts</li>
+              <li class="prize-content">3Box Swags</li>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div
+            class="card prize-card"
+            style="width: 22.11rem; height: 18.99rem; background-color: orange; margin-bottom: 5rem;"
+          >
+            <div
+              class="prize-icon-container"
+              style="top: -38px; margin-left:8rem"
+            >
+              <i class="fa fa-trophy trophy-icon" style="color: #1c274b;"></i>
+            </div>
+            <div
+              class="card-body prize-card"
+              style="background-color: orange; margin-top: 4rem;"
+            >
+              <h5 class="card-title prize-title">
+                <strong style="margin-left: 1rem; font-size: 1.6rem;"
+                  >Best Status Hack</strong
+                >
+              </h5>
+
+              <li class="prize-content">250$ in SNTs to the Winning Team</li>
+              <li class="prize-content">100$ in SNTs as Bounties</li>
+              <li class="prize-content">Status T-shirts</li>
+              <li class="prize-content">Status Swags</li>
+            </div>
+          </div>
+        </div>
         <!-- <div class="col-sm-4">
             <div class="card prize-card" style="width: 22.11rem; height: 19.99rem; background-color: orange; margin-bottom: 5rem;">
                 <div class="prize-icon-container" style="top: -38px; margin-left:8rem"><i class="fa fa-trophy trophy-icon" style="color: #1c274b;"></i></div>
