--- a/index.html
+++ b/index.html
@@ -898,7 +898,7 @@
             <img src="img/assests/backend_day.jpeg" alt="Backenc day" style="width: 100%;">
             <div class="event-container">
                 <h4><strong>Backend Day</strong> </h4>   
-              <a href="https://forms.gle/ymw7YzjLZSj2Ha649" target="_blank" > <button  class="event-apply-btn">apply now</button></a> 
+              <a href="http://resources.emsiha.community" target="_blank" > <button  class="event-apply-btn">Get Resources</button></a> 
             </div>
         </div>
         <div class="event-card">
