updated amrit das specification

--- a/index.html
+++ b/index.html
@@ -421,9 +421,9 @@
                         <strong>10:45 AM</strong>
                       </td>
                       <td>
-                        <div class="tag">Talks</div>
+                        <div class="tag">Talk</div>
                         <br> Talk session 
-                        <spann class="subtitle">- by Pratilipi Team</span>
+                        <div class="subtitle">- by Pratilipi Team</div>
                       </td>
                     </tr>
 
@@ -475,7 +475,7 @@
                         <strong>2:15 PM</strong>
                       </td>
                       <td>
-                        <div class="tag">Workshop</div>
+                        <div class="tag">Talk</div>
                       <br>  Building high performance web apps in Gatsby.js 
                         <div class="subtitle">- by Harshil Agrawal</div>
                       </td>
@@ -490,7 +490,7 @@
                         <strong>3:00 PM</strong>
                       </td>
                       <td>
-                        <div class="tag">talk</div>
+                        <div class="tag">Workshop</div>
                        <br> How to build a search engine in Elastic search
                         <div class="subtitle">- by  Aravind Putrevu</div>
                       </td>
@@ -505,7 +505,7 @@
                         <strong>4:00 PM</strong>
                       </td>
                       <td>
-                        <div class="tag">talk</div>
+                        <div class="tag">Workshop</div>
                        <br> Design Sprint Bootcamp
                         <div class="subtitle">- by Vikram Kaushik</div>
                       </td>
@@ -1041,20 +1041,6 @@
 
                 
 
-                <div class="col-xl-2 col-md-3 col-sm-4 col-6">
-                    <a href="https://www.linkedin.com/in/surya-narayan-barik-15961a8b/" target="_blank">
-                        <div class="speaker-card">
-                            <img class="speaker-card-img-top" src="img/surya.jpg" alt="Surya Narayan Barik">
-                            <div class="speaker-card-body">
-                                <div class="speaker-card-header">
-                                    <h5>Surya Narayan Barik</h5>
-                                    <p class="text-faded">R&D Dept.
-                                        <br />ProcessMap</p>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
 
                 <div class="col-xl-2 col-md-4 col-sm-4 col-6">
                     <a href="https://www.linkedin.com/in/nirmalhota/" target="_blank">
@@ -1105,6 +1091,22 @@
                   </div>
               </a>
           </div>
+
+          
+          <div class="col-xl-2 col-md-3 col-sm-4 col-6">
+            <a href="https://www.linkedin.com/in/surya-narayan-barik-15961a8b/" target="_blank">
+                <div class="speaker-card">
+                    <img class="speaker-card-img-top" src="img/surya.jpg" alt="Surya Narayan Barik">
+                    <div class="speaker-card-body">
+                        <div class="speaker-card-header">
+                            <h5>Surya Narayan Barik</h5>
+                            <p class="text-faded">R&D Dept.
+                                <br />ProcessMap</p>
+                        </div>
+                    </div>
+                </div>
+            </a>
+        </div>
 <!-- 
                 <div class="col-xl-2 col-md-4 col-sm-4 col-6">
                     <a href="https://www.linkedin.com/in/batabyalsunny/" target="_blank">
@@ -1161,7 +1163,7 @@
                           <div class="speaker-card-body">
                               <div class="speaker-card-header">
                                   <h5>Harshil Agarwal</h5>
-                                  <p class="text-faded">GitHub Campus Expert<br />Github
+                                  <p class="text-faded">GitHub Campus Expert<br />GitHub
                                     </p>
                               </div>
                           </div>
@@ -1192,8 +1194,8 @@
                       <div class="speaker-card-body">
                           <div class="speaker-card-header">
                               <h5>Amrit Das</h5>
-                              <p class="text-faded"><br />
-                                </p>
+                              <p class="text-faded">Actions on Google<br />
+                               Developer </p>
                           </div>
                       </div>
                   </div>
