updated schedule icons

--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
                     
                     <tr>
                       <td>
-                        <p class="schedule-time evening"></p>
+                        <p class="schedule-time night"></p>
                       </td>
                       <td>
                         <strong>9:00 PM</strong>
@@ -558,7 +558,7 @@
                     
                     <tr>
                       <td>
-                        <p class="schedule-time evening"></p>
+                        <p class="schedule-time night"></p>
                       </td>
                       <td>
                         <strong>9:30 PM</strong>
