--- a/index.html
+++ b/index.html
@@ -976,9 +976,9 @@
             </div>
         </div>
         <div class="event-card">
-            <img src="img/assests/comingsoon.png" alt="" class="coming-soon-img" style="width: 100%; ">
+            <img src="img/assests/blockchain 101-01.jpg" alt="" class="coming-soon-img" style="width: 100%;height: 320px; ">
             <div class="event-container">
-                <h4 style="color:black;"><strong>Deployment Day</strong> </h4>
+                <h4 style="color:black;"><strong>BlockChain 101</strong> </h4>
                 <a href="#" target="_blank" style="color: #fff; " ><button disabled class="event-apply-btn">Coming soon!</button></a>
             </div>
         </div>
