--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
                       <td>
                         <div class="tag">talk</div>
                        <br> What's MVP and how to quickly build it?
-                        <div class="subtitle">- by Anurag Kyle</div>
+                        <div class="subtitle">- by Anurag Kyale</div>
                       </td>
                     </tr>
 
@@ -723,8 +723,8 @@
                         <strong>8:30 AM</strong>
                       </td>
                       <td>
-                        <div class="tag">Workshops</div>
-                        <br>Sprintday </td>
+                        <!-- <div class="tag">Workshops</div> -->
+                        Sprintday Continues </td>
                     </tr>
 
                     <!-- <tr>
@@ -968,6 +968,14 @@
         </button>
 
         <div class="glider">
+
+          <div class="event-card">
+            <img src="img/assests/blockchain 101-01.jpg" alt="" class="blockchain 101" style="width: 100%; ">
+            <div class="event-container">
+                <h4 style="color:black;"><strong>BlockChain 101</strong> </h4>
+                <a href="https://forms.gle/r5uR5JJchWaoaNmT7" target="_blank" style="color: #fff; " ><button  class="event-apply-btn">Register Here</button></a>
+            </div>
+        </div>
           <div class="event-card">
             <img src="img/assests/backend_day.jpeg" alt="Backenc day" style="width: 100%;">
             <div class="event-container">
@@ -975,13 +983,7 @@
               <a href="http://resources.emsiha.community" target="_blank" > <button  class="event-apply-btn">Get Resources</button></a> 
             </div>
         </div>
-        <div class="event-card">
-            <img src="img/assests/blockchain 101-01.jpg" alt="" class="coming-soon-img" style="width: 100%;height: 320px; ">
-            <div class="event-container">
-                <h4 style="color:black;"><strong>BlockChain 101</strong> </h4>
-                <a href="#" target="_blank" style="color: #fff; " ><button disabled class="event-apply-btn">Coming soon!</button></a>
-            </div>
-        </div>
+        
          <div class="event-card">
              <img src="img/assests/think design print poster.jpg" alt="" style="width: 100%;">
              <div class="event-container">
