updated blockchain event poster

--- a/index.html
+++ b/index.html
@@ -966,11 +966,11 @@
         <button class="glider-prev">
             <i class="fas fa-arrow-circle-left" ></i>
         </button>
-
+ 
         <div class="glider">
 
           <div class="event-card">
-            <img src="img/assests/blockchain 101-01.jpg" alt="" class="blockchain 101" style="width: 100%; ">
+            <img src="img/assests/blockchain 101.jpg" alt="" class="blockchain 101" style="width: 100%; ">
             <div class="event-container">
                 <h4 style="color:black;"><strong>BlockChain 101</strong> </h4>
                 <a href="https://forms.gle/r5uR5JJchWaoaNmT7" target="_blank" style="color: #fff; " ><button  class="event-apply-btn">Register Here</button></a>
