speaker-vikram linkedIn link fixed,changed vikram kyale to vikram kayle

--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
                       <td>
                         <div class="tag">talk</div>
                        <br> What's MVP and how to quickly build it?
-                        <div class="subtitle">- by Anurag Kyale</div>
+                        <div class="subtitle">- by Anurag Kayle</div>
                       </td>
                     </tr>
 
@@ -1128,7 +1128,7 @@
 
        
       <div class="col-xl-2 col-md-3 col-sm-4 col-6">
-        <a href="https://www.linkedin.com/in/surya-narayan-barik-15961a8b/" target="_blank">
+        <a href="https://www.linkedin.com/in/membranecreative" target="_blank">
             <div class="speaker-card">
                 <img class="speaker-card-img-top" src="img/vikram-kaushik.jpg" alt="Surya Narayan Barik">
                 <div class="speaker-card-body">
@@ -1141,21 +1141,7 @@
             </div>
         </a>
     </div>
-<!-- 
-                <div class="col-xl-2 col-md-4 col-sm-4 col-6">
-                    <a href="https://www.linkedin.com/in/batabyalsunny/" target="_blank">
-                        <div class="speaker-card">
-                            <img class="speaker-card-img-top" src="img/sunny.jpeg" alt="Sunny Batabyal">
-                            <div class="speaker-card-body">
-                                <div class="speaker-card-header">
-                                    <h5>Sunny Batabyal</h5>
-                                    <p class="text-faded">Sr. Software Engineer
-                                        <br />Mindfire Solutions</p>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div> -->
+
 
             </div>
     </section>
