--- a/index.html
+++ b/index.html
@@ -2236,6 +2236,11 @@
           </a>
         </div>
         <div class="col-lg-4 col-md-6 text-center mb-5 sponsors-logo">
+          <a href="https://codingblocks.com/" target="_blank">
+            <img src="img/codingblocks.png" alt="Coding Blocks logo"></img>
+          </a>
+        </div>
+        <div class="col-lg-4 col-md-6 text-center mb-5 sponsors-logo">
           <a href="https://www.poap.xyz/" target="_blank">
             <img src="img/poap.png" alt="poap logo"></img>
           </a>
