added new sponsor (clickup)

--- a/index.html
+++ b/index.html
@@ -2250,6 +2250,11 @@
             <img src="img/todoist.svg" alt="Todoist logo"></img>
           </a>
         </div>
+        <div class="col-lg-4 col-md-6 text-center mb-5 sponsors-logo">
+          <a href="https://clickup.com/" target="_blank">
+            <img src="img/clickup.svg" alt="clickup logo"></img>
+          </a>
+        </div>
         <!--
         <div class="col-lg-4 col-md-6 text-center mb-5 sponsors-logo">
           <a href="https://www.mongodb.com/" target="_blank">
