added new mentor

--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
                       <td>
                         <div class="tag">talk</div>
                        <br> What's MVP and how to quickly build it?
-                        <div class="subtitle">- by Anurag Kayle</div>
+                        <div class="subtitle">- by Anurag kyal</div>
                       </td>
                     </tr>
 
@@ -1112,12 +1112,12 @@
 
          
         <div class="col-xl-2 col-md-3 col-sm-4 col-6">
-          <a href="https://www.linkedin.com/in/surya-narayan-barik-15961a8b/" target="_blank">
+          <a href="https://www.linkedin.com/in/anurag-kyal-a344a7102" target="_blank">
               <div class="speaker-card">
                   <img class="speaker-card-img-top" src="img/anurag-kayle.jpg" alt="anurag-kayle">
                   <div class="speaker-card-body">
                       <div class="speaker-card-header">
-                          <h5>Anurag kayle</h5>
+                          <h5>Anurag kyal</h5>
                           <p class="text-faded">Co-founder
                               <br />Rewoke</p>
                       </div>
@@ -1250,6 +1250,22 @@
                 </div>
             </a>
         </div>
+
+           
+        <div class="col-xl-2 col-md-4 col-sm-4 col-6">
+          <a href="https://www.linkedin.com/in/gopal-pal-895926a8/" target="_blank">
+              <div class="speaker-card">
+                  <img class="speaker-card-img-top" src="img/mentors/gopal-chandra-pal.jpeg" alt="gopal-chandra-pal>
+                  <div class="speaker-card-body">
+                      <div class="speaker-card-header">
+                          <h5>Gopal Chandra pal</h5>
+                          <p class="text-faded">UI/UX Designer<br />
+                            Invincix Solutions </p>
+                      </div>
+                  </div>
+              </div>
+          </a>
+      </div>
 
             <!-- <div class="col-xl-2 col-md-4 col-sm-4 col-6">
               <a href="https://www.linkedin.com/in/amritdash60/" target="_blank">
