--- a/prizes.html
+++ b/prizes.html
@@ -284,6 +284,67 @@
         <div class="col-sm-4">
           <div
             class="card prize-card"
+            style="width: 22.11rem; height: 18.99rem; background-color: orange; margin-bottom: 5rem;"
+          >
+            <div
+              class="prize-icon-container"
+              style="top: -38px; margin-left:8rem"
+            >
+              <i class="fa fa-trophy trophy-icon" style="color: #1c274b;"></i>
+            </div>
+            <div
+              class="card-body prize-card"
+              style="background-color: orange; margin-top: 4rem;"
+            >
+              <h5 class="card-title prize-title">
+                <strong style="margin-left: 1rem; font-size: 1.4rem;"
+                  >Best Matic Hack</strong
+                >
+              </h5>
+
+              <li class="prize-content">
+                Cash Prize INR 15,000 (if the Hack is built using Matic Network)
+              </li>
+              <li class="prize-content">
+                Matic T-shirts & Swags to every members
+              </li>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-sm-4">
+          <div
+            class="card prize-card"
+            style="width: 22.11rem; height: 18.99rem; background-color: orange; margin-bottom: 5rem;"
+          >
+            <div
+              class="prize-icon-container"
+              style="top: -38px; margin-left:8rem"
+            >
+              <i class="fa fa-trophy trophy-icon" style="color: #1c274b;"></i>
+            </div>
+            <div
+              class="card-body prize-card"
+              style="background-color: orange; margin-top: 4rem;"
+            >
+              <h5 class="card-title prize-title">
+                <strong style="margin-left: 1rem; font-size: 1.4rem;"
+                  >Best BlockStack Hack</strong
+                >
+              </h5>
+
+              <li class="prize-content">
+                Cash Prize INR 15,000 (if the Hack is built using BlockStack)
+              </li>
+              <li class="prize-content">
+                BlockStack T-shirts & Swags to every members
+              </li>
+            </div>
+          </div>
+        </div>
+        <!-- <div class="col-sm-4">
+          <div
+            class="card prize-card"
             style="width: 22.11rem; height: 28.99rem; background-color: orange; margin-bottom: 5rem;"
           >
             <div
@@ -326,7 +387,39 @@
               <li class="prize-content">Lottiefiles Coupons</li>
             </div>
           </div>
+
+          <div class="col-sm-4">
+          <div
+            class="card prize-card"
+            style="width: 22.11rem; height: 18.99rem; background-color: orange; margin-bottom: 5rem;"
+          >
+            <div
+              class="prize-icon-container"
+              style="top: -38px; margin-left:8rem"
+            >
+              <i class="fa fa-trophy trophy-icon" style="color: #1c274b;"></i>
+            </div>
+            <div
+              class="card-body prize-card"
+              style="background-color: orange; margin-top: 4rem;"
+            >
+              <h5 class="card-title prize-title">
+                <strong style="margin-left: 1rem; font-size: 1.4rem;"
+                  >Best Matic Hack</strong
+                >
+              </h5>
+
+              <li class="prize-content">
+                Cash Prize INR 15,000 (if the Hack is built using Matic Network)
+              </li>
+              <li class="prize-content">
+                Cash Prize INR 10,000 (if the Hack is built using Ethereum)
+              </li>
+            </div>
+          </div>
         </div>
+
+        </div> -->
         <!-- <div class="col-sm-4">
             <div class="card prize-card" style="width: 22.11rem; height: 18.99rem; background-color: orange; margin-bottom: 5rem;">
                 <div class="prize-icon-container" style="top: -38px; margin-left:8rem"><i class="fa fa-trophy trophy-icon" style="color: #1c274b;"></i></div>
