--- a/prizes.html
+++ b/prizes.html
@@ -306,6 +306,9 @@
                 Cash Prize INR 15,000 (if the Hack is built using Matic Network)
               </li>
               <li class="prize-content">
+                Cash Prize INR 10,000 (if the Hack is built using Ethereum)
+              </li>
+              <li class="prize-content">
                 Matic T-shirts & Swags to every members
               </li>
             </div>
@@ -510,7 +513,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-4">
+        <!-- <div class="col-sm-4">
           <div
             class="card prize-card"
             style="width: 22.11rem; height: 18.99rem; background-color: orange; margin-bottom: 5rem;"
@@ -539,7 +542,7 @@
               </li>
             </div>
           </div>
-        </div>
+        </div> -->
         <div class="col-sm-4">
           <div
             class="card prize-card"
