added incubation partner

--- a/index.html
+++ b/index.html
@@ -2348,6 +2348,13 @@
                 <h3>Accelerator Partner</h3>
               </div>
 
+              <div class="col-lg-4 col-md-6 text-center mb-5 sponsors-logo">
+                <a href="#" target="_blank">
+                  <img src="img/kiit logo.png" alt="Yuva Fund logo"></img>
+                </a>
+                <h3>Incubation Parter</h3>
+              </div>
+
           <div class="col-lg-4 col-md-6  mb-5 sponsors-logo">
               <a href="https://www.picgen.in/" target="_blank">
                   <img src="img/picgen.png" alt="picgen logo"></img>
