new mentor added

--- a/index.html
+++ b/index.html
@@ -1267,6 +1267,21 @@
           </a>
       </div>
 
+      <div class="col-xl-2 col-md-4 col-sm-4 col-6">
+        <a href="https://www.linkedin.com/in/gopal-pal-895926a8/" target="_blank">
+            <div class="speaker-card">
+                <img class="speaker-card-img-top" src="img/mentors/Kallola-Ranjan-Pradhan.jpg" alt="Kallola-Ranjan-Pradhan
+                <div class="speaker-card-body">
+                    <div class="speaker-card-header">
+                        <h5>Kallola Ranjan Pradhan</h5>
+                        <p class="text-faded">Associate Consultant<br />
+                          Invincix Solutions </p>
+                    </div>
+                </div>
+            </div>
+        </a>
+    </div>
+
             <!-- <div class="col-xl-2 col-md-4 col-sm-4 col-6">
               <a href="https://www.linkedin.com/in/amritdash60/" target="_blank">
                   <div class="speaker-card">
